다른 분들도 확인 할 수 있게 log를 남겨 두겠습니다. (로그를 debug로 바꿉니다.)